--- a/src/app/modules/customer/customer-profile/customer-profile.component.html
+++ b/src/app/modules/customer/customer-profile/customer-profile.component.html
@@ -4,7 +4,10 @@
     <!-- Header -->
     <div class="row py-3 pb-0">
         <div class="col-lg-12 col-sm-12">
-            <div class="heading">{{getTitle()}}</div>
+            <div class="heading">{{getTitle()}}
+                <button mat-raised-button color="primary" style="float:right;" (click)="viewHistory()">View History
+                </button>
+            </div>
         </div>
     </div>
     <!-- Header -->
