--- a/src/app/modules/customer/customer-profile/customer-profile.component.html
+++ b/src/app/modules/customer/customer-profile/customer-profile.component.html
@@ -12,7 +12,7 @@
         </div>
     </div>
     <!-- Header -->
-    <div class="flex flex-auto border shadow-xs rounded-sm overflow-scroll " style="flex-direction: column;">
+    <div class="flex flex-auto border shadow-xs rounded-sm overflow-scroll ">
         <form [formGroup]="roleForm" class="kt-form kt-form--group-seperator-dashed">
             <div class="kt-form">
                 <div class="kt-portlet__body container">
@@ -40,8 +40,8 @@
                     <div class="flex" style="flex-wrap: wrap;">
                         <app-zone-branch-circle [should_show_circle]="false" [should_filter]="false" [form]="roleForm"
                                                 (branchZoneCircleData)="getAllData($event)"></app-zone-branch-circle>
-                            <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">       
-                                 <mat-form-field class="mat-form-field-fluid w-100" appearance="outline">
+                        <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">
+                            <mat-form-field class="mat-form-field-fluid w-100" appearance="outline">
                                 <mat-label class="customMatLabel">CNIC <strong class="matMandatory">*</strong>
                                 </mat-label>
                                 <input on-focusout="cnicfocusout()" matInput placeholder="Enter CNIC"
@@ -55,7 +55,7 @@
                             </mat-form-field>
                         </div>
 
-                        <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">       
+                        <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">
                             <mat-form-field class="mat-form-field-fluid w-100" appearance="outline">
                                 <mat-label class="customMatLabel">Select Gender <strong class="matMandatory">*</strong>
                                 </mat-label>
@@ -67,7 +67,7 @@
                                 </mat-select>
                             </mat-form-field>
                         </div>
-                        <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">       
+                        <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">
                             <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                                 <!--<mat-label>Select Marital Status</mat-label>-->
                                 <mat-label class="customMatLabel">Select Marital Status</mat-label>
@@ -79,7 +79,7 @@
                             </mat-form-field>
                         </div>
 
-                        <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">       
+                        <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">
 
                             <mat-form-field class="mat-form-field-fluid w-100" appearance="outline">
                                 <mat-label class="customMatLabel">Enter Customer Name <strong
@@ -91,7 +91,7 @@
                                 </mat-error>
                             </mat-form-field>
                         </div>
-                        <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">       
+                        <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">
                             <mat-form-field class="mat-form-field-fluid w-100" appearance="outline">
                                 <mat-label class="customMatLabel">Enter Father Name <strong
                                     class="matMandatory">*</strong></mat-label>
@@ -105,7 +105,7 @@
                             </mat-form-field>
                         </div>
 
-                        <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">       
+                        <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">
                             <mat-form-field class="mat-form-field-fluid w-100" appearance="outline">
                                 <mat-label class="customMatLabel">Enter Father / Husband CNIC</mat-label>
                                 <input matInput placeholder="Enter Father / Husband CNIC"
@@ -115,7 +115,8 @@
                                 <mat-hint align="left">Please Enter Father/Husband CNIC </mat-hint> -->
                             </mat-form-field>
                         </div>
-                        <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;" *ngIf="HusbandNameShow">       
+                        <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;"
+                             *ngIf="HusbandNameShow">
                             <mat-form-field class="mat-form-field-fluid w-100" appearance="outline">
                                 <mat-label class="customMatLabel">Enter Husband Name <strong
                                     class="matMandatory">*</strong></mat-label>
@@ -126,7 +127,7 @@
                             </mat-form-field>
                         </div>
 
-                        <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">       
+                        <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">
                             <mat-form-field class="mat-form-field-fluid w-100" appearance="outline">
                                 <!--<mat-label>Select DOB</mat-label>--> <!---->
                                 <mat-label class="customMatLabel">Select Date of Birth <strong
@@ -140,7 +141,7 @@
                             </mat-form-field>
                         </div>
 
-                        <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">       
+                        <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">
 
                             <mat-form-field class="mat-form-field-fluid w-100" appearance="outline">
                                 <!--<mat-label>CNIC Issue Date</mat-label>-->
@@ -159,7 +160,7 @@
                             </mat-form-field>
                         </div>
 
-                        <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">       
+                        <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">
                             <mat-form-field class="mat-form-field-fluid w-100" appearance="outline">
                                 <!-- <mat-label>Select CNIC Expiry</mat-label>-->
                                 <mat-label class="customMatLabel">Enter CNIC Expiry Date <strong
@@ -259,7 +260,7 @@
 
                                 <div class="col-lg-5 kt-margin-bottom-20-mobile">
                                     <mat-form-field class="mat-form-field-fluid w-100" appearance="outline">
-                                        <input matInput readonly="readonly" value="+923"/>
+                                        <input matInput readonly="readonly" value="+923" id="tel_code"/>
                                     </mat-form-field>
                                 </div>
                                 <div class="col-lg-7 pl-0 kt-margin-bottom-20-mobile">
@@ -267,7 +268,8 @@
                                         <mat-label class="customMatLabel">Enter Cell No <strong
                                             class="matMandatory">*</strong></mat-label>
                                         <input on-focusout="checkSequentialCell()" matInput placeholder="Enter Cell No"
-                                               formControlName="CellNumber" maxlength="9" autocomplete="off"
+                                               formControlName="CellNumber" minlength="9" maxlength="9"
+                                               autocomplete="off"
                                                appNumberOnly/>
                                         <mat-error *ngIf="hasError('CellNumber', 'required')">Cell No
                                             <strong>required</strong></mat-error>
@@ -605,20 +607,23 @@
 
     </div>
     <div class="kt-portlet__foot kt-portlet__foot--fit mt-2 kt-portlet__no-border">
-        <div class="kt-form__actions kt-form__actions--solid">
+        <div class="kt-form__actions kt-form__actions--solid flex-height-">
             <div class="row text-right">
                 <div class="col-lg-12" *ngIf="HideShowSaveButton">
                     <!--<button type="button" class="button-red pull-left" mat-raised-button cdkFocusInitial>
                       Cancel
                     </button>-->
                     <button type="button" class="btn btn-primary bg-green  " mat-raised-button color="primary"
-                    (click)="onSubmit(false)" [disabled]="viewLoading || submitted">
+                            (click)="onSubmit(false)" [disabled]="viewLoading || submitted">
                         <mat-icon class="mr-2">save</mat-icon>
                         Save
                     </button>
-                    <button type="button" mat-raised-button type="button" class="mx-2 mat-focus-indicator mat-flat-button mat-button-base mat-primary bg-gray-500 text-white" mat-raised-button 
+                    <button type="button" mat-raised-button type="button"
+                            class="mx-2 mat-focus-indicator mat-flat-button mat-button-base mat-primary bg-gray-500 text-white"
+                            mat-raised-button
                             (click)="submitDocuments()">
-                            <mat-icon class="mr-2">check_circle</mat-icon>Submit Documents
+                        <mat-icon class="mr-2">check_circle</mat-icon>
+                        Submit Documents
                     </button>
                     <button type="button" class="btn btn-primary" mat-raised-button color="primary"
                             (click)="onSubmit(true)" [disabled]="viewLoading || submitted">
@@ -628,7 +633,34 @@
                 </div>
             </div>
         </div>
+        <div class="table table-striped table-bordered" style="height: 500px">
+            <thead>
+            <tr class="table-header-background">
+                <td>Document Type</td>
+                <td>Reference Number</td>
+                <td>Type Description</td>
+                <td>File Description</td>
+                <td>Actions</td>
+            </tr>
+            </thead>
+            <tbody>
+            <!--            url: customer_document.FilePath,-->
+            <!--            type_description: single_document_detail.Description,-->
+            <!--            type_name: single_document_detail.DocumentTypeName,-->
+            <!--            reference: single_document_detail.RefrenceNumber,-->
+            <!--            file_description: customer_document.Description-->
+            <tr *ngFor="let single_images of document_images">
+                <td>{{single_images?.type_name}}</td>
+                <td>{{single_images?.reference}}</td>
+                <td>{{single_images?.type_description}}</td>
+                <td>{{single_images?.file_description}}</td>
+                <td>ADD/EDIT</td>
+
+            </tr>
+            </tbody>
+        </div>
     </div>
+
 
 </div>
 
