--- a/src/app/modules/journal-voucher/jv-form/jv-form.component.html
+++ b/src/app/modules/journal-voucher/jv-form/jv-form.component.html
@@ -93,18 +93,11 @@
                         <input matInput placeholder="" formControlName="GlSubID" maxlength="4" autocomplete="off"
                                appNumberOnly [readonly]="recoverySaved || transactionEdit || viewOnly"
                                [disabled]="recoverySaved || transactionEdit || viewOnly" minlength="4"/>
+                        <mat-hint  align="start" style="font-size: 12px; color: black">{{glSub}}</mat-hint>
                     </mat-form-field>
-                    <span style="font-size: 10px">{{glSub}}</span>
                 </div>
             </div>
-<!--            <div class="mx-2">-->
-<!--                <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0" style="width: 225px;">-->
-<!--                    <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">-->
-<!--                        <mat-label class="customMatLabel"></mat-label>-->
-<!--                        <input matInput placeholder="" formControlName="GlSub" [readonly]="gubSub"/>-->
-<!--                    </mat-form-field>-->
-<!--                </div>-->
-<!--            </div>-->
+
             <div class="mx-2">
                 <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0" style="width: 225px;">
                     <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
