--- a/src/app/modules/customer/check-eligibility/check-eligibility.component.html
+++ b/src/app/modules/customer/check-eligibility/check-eligibility.component.html
@@ -257,9 +257,11 @@
                                 <mat-form-field class="mat-form-field-fluid w-100" appearance="outline">
                                     <mat-label class="customMatLabel">Enter Customer Name <strong
                                         class="matMandatory">*</strong></mat-label>
-                                    <p *ngIf="UrduName!=undefined && UrduName!=''" class="text-right"> {{UrduName}}</p>
+                                    <!--                                    <p *ngIf="UrduName!=undefined && UrduName!=''" class="text-right"> {{UrduName}}</p>-->
                                     <input matInput placeholder="Enter Name" appAlphabetOnly
                                            formControlName="CustomerName" maxlength="50" autocomplete="off" readonly/>
+                                    <mat-hint align="end" *ngIf="UrduName!=undefined && UrduName!=''"
+                                              class="text-md text-black"> {{UrduName}}</mat-hint>
                                     <mat-error *ngIf="hasError('CustomerName', 'required')">Name
                                         <strong>required</strong>
                                     </mat-error>
@@ -271,10 +273,12 @@
                                 <mat-form-field class="mat-form-field-fluid w-100" appearance="outline">
                                     <mat-label class="customMatLabel">City <strong
                                         class="matMandatory">*</strong></mat-label>
-                                    <p *ngIf="UrduCity!=undefined && UrduCity!=''"
-                                       class="text-right">{{UrduCity}}</p>
+                                    <!--                                    <p *ngIf="UrduCity!=undefined && UrduCity!=''"-->
+                                    <!--                                       class="text-right">{{UrduCity}}</p>-->
                                     <input matInput placeholder="City" formControlName="District"
                                            [(ngModel)]="disrtrict_value"/>
+                                    <mat-hint align="end" *ngIf="UrduCity!=undefined && UrduCity!=''"
+                                              class="text-md text-black"> {{UrduCity}}</mat-hint>
                                     <mat-hint align="left">Please enter City <strong></strong></mat-hint>
                                 </mat-form-field>
                             </div>
@@ -285,10 +289,12 @@
                                 <mat-form-field class="mat-form-field-fluid w-100" appearance="outline">
                                     <mat-label class="customMatLabel">Enter Current Address <strong
                                         class="matMandatory">*</strong></mat-label>
-                                    <p *ngIf="UrduCurrentAddress!=undefined && UrduCurrentAddress!=''"
-                                       class="text-right">{{UrduCurrentAddress}}</p>
+<!--                                    <p *ngIf="UrduCurrentAddress!=undefined && UrduCurrentAddress!=''"-->
+                                    <!--                                       class="text-right">{{UrduCurrentAddress}}</p>-->
                                     <input matInput placeholder="Enter Current Address"
                                            formControlName="CurrentAddress" maxlength="150" autocomplete="off"/>
+                                    <mat-hint align="end" *ngIf="UrduCurrentAddress!=undefined && UrduCurrentAddress!=''"
+                                              class="text-md text-black"> {{UrduCurrentAddress}}</mat-hint>
                                     <mat-error *ngIf="hasError('CurrentAddress', 'required')">Current Address <strong>required</strong>
                                     </mat-error>
                                     <mat-hint align="left">Please enter Current Address
