--- a/src/app/modules/customer/customer-profile/customer-profile.component.html
+++ b/src/app/modules/customer/customer-profile/customer-profile.component.html
@@ -87,7 +87,8 @@
                                     </mat-form-field>
                                 </div>
 
-                                <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2  mb-2" style="width: 225px;">
+                                <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2  mb-2"
+                                     style="width: 225px;">
 
                                     <mat-form-field class="mat-form-field-fluid w-100" appearance="outline">
                                         <mat-label class="customMatLabel">Enter Customer Name <strong
@@ -100,15 +101,16 @@
                                             <strong>required</strong>
                                         </mat-error>
                                         <mat-hint align="end" *ngIf="UrduName!=undefined && UrduName!=''"
-                                        class="text-md text-black"> {{UrduName}}</mat-hint>
+                                                  class="text-md text-black"> {{UrduName}}</mat-hint>
                                     </mat-form-field>
                                 </div>
-                                <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2 mb-2" style="width: 225px;">
+                                <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2 mb-2"
+                                     style="width: 225px;">
                                     <mat-form-field class="mat-form-field-fluid w-100" appearance="outline">
                                         <mat-label class="customMatLabel">Enter Father Name <strong
                                             class="matMandatory">*</strong></mat-label>
                                         <mat-hint align="end" *ngIf="UrduFatherName!=undefined && UrduFatherName!=''"
-                                           class="text-md text-black py-2"> {{UrduFatherName}}</mat-hint>
+                                                  class="text-md text-black py-2"> {{UrduFatherName}}</mat-hint>
                                         <input matInput placeholder="Enter Father Name"
                                                formControlName="FatherName" maxlength="50" autocomplete="off"
                                                appAlphabetOnly
@@ -122,7 +124,8 @@
                                     <mat-form-field class="mat-form-field-fluid w-100" appearance="outline">
                                         <mat-label class="customMatLabel">Enter Father / Husband CNIC</mat-label>
                                         <input matInput placeholder="Enter Father / Husband CNIC"
-                                               formControlName="FatherOrHusbandCnic" maxlength="15" autocomplete="off" appNumberOnly/>
+                                               formControlName="FatherOrHusbandCnic" maxlength="15" autocomplete="off"
+                                               appNumberOnly/>
                                         <!-- <mat-error *ngIf="hasError('FatherOrHusbandCnic', 'required')">Father / Husband CNIC<strong>required</strong></mat-error>
                                         <mat-error *ngIf="hasError('FatherOrHusbandCnic', 'pattern')"><strong>{{errors.cnic}}</strong></mat-error>
                                         <mat-hint align="left">Please Enter Father/Husband CNIC </mat-hint> -->
@@ -266,7 +269,7 @@
                                         <mat-label class="customMatLabel">Select Risk Category <strong
                                             class="matMandatory">*</strong></mat-label>
                                         <mat-select formControlName="RiskCategory">
-                                            <mat-option *ngFor="let obj of RiskCategoryLov?.LOVs" [value]="obj.Id">
+                                            <mat-option *ngFor="let obj of RiskCategoryLov?.LOVs" [value]="obj.Value">
                                                 {{obj.Name}}
                                             </mat-option>
                                         </mat-select>
@@ -301,12 +304,17 @@
                                         </div>
                                     </div>
                                 </div>
+                                <div class="col-lg-1 kt-margin-bottom-20-mobile">
+                                    <mat-form-field class="mat-form-field-fluid w-100" appearance="outline">
+                                        <input matInput readonly="readonly" value="+923" id="tel_code_2"/>
+                                    </mat-form-field>
+                                </div>
                                 <div class="col-lg-3 kt-margin-bottom-20-mobile">
                                     <mat-form-field class="mat-form-field-fluid w-100" appearance="outline">
                                         <mat-label class="customMatLabel">Enter Phone Number</mat-label>
                                         <input on-focusout="checkSequentialPhone()" matInput
                                                placeholder="Enter Residence No"
-                                               formControlName="PhoneNumber" maxlength="12comm" autocomplete="off"
+                                               formControlName="PhoneNumber" maxlength="9" autocomplete="off"
                                                appNumberOnly/>
                                         <mat-error *ngIf="hasError('PhoneNumber', 'required')">Residence No
                                             <strong>required</strong></mat-error>
@@ -432,8 +440,8 @@
                                 <div class="col-lg-3 kt-margin-bottom-20-mobile mb-2">
                                     <mat-form-field class="mat-form-field-fluid w-100" appearance="outline">
                                         <mat-label class="customMatLabel">Enter Birth Place</mat-label>
-                                        <mat-hint align="end"  *ngIf="UrduBirthPlace!=undefined && UrduBirthPlace!=''"
-                                           class="text-md text-black">{{UrduBirthPlace}}</mat-hint>
+                                        <mat-hint align="end" *ngIf="UrduBirthPlace!=undefined && UrduBirthPlace!=''"
+                                                  class="text-md text-black">{{UrduBirthPlace}}</mat-hint>
                                         <input matInput placeholder="Enter Birth Place" formControlName="BirthPlace"
                                                maxlength="30" autocomplete="off" readonly/>
                                         <mat-error *ngIf="hasError('BirthPlace', 'required')">Birth Place
@@ -592,8 +600,9 @@
                                     <mat-form-field class="mat-form-field-fluid w-100" appearance="outline">
                                         <mat-label class="customMatLabel">Enter Current Address <strong
                                             class="matMandatory">*</strong></mat-label>
-                                        <mat-hint align="end" *ngIf="UrduCurrentAddress!=undefined && UrduCurrentAddress!=''"
-                                           class="text-md text-black">{{UrduCurrentAddress}}</mat-hint >
+                                        <mat-hint align="end"
+                                                  *ngIf="UrduCurrentAddress!=undefined && UrduCurrentAddress!=''"
+                                                  class="text-md text-black">{{UrduCurrentAddress}}</mat-hint>
                                         <input matInput placeholder="Enter Current Address"
                                                formControlName="CurrentAddress" maxlength="150" autocomplete="off"/>
                                         <mat-error *ngIf="hasError('CurrentAddress', 'required')">Current Address
@@ -610,8 +619,9 @@
                                     <mat-form-field class="mat-form-field-fluid w-100" appearance="outline">
                                         <mat-label class="customMatLabel">Enter Permanent Address <strong
                                             class="matMandatory">*</strong></mat-label>
-                                        <mat-hint align="end" *ngIf="UrduPermanentAddress!=undefined && UrduPermanentAddress!=''"
-                                           class="text-md text-black">{{UrduPermanentAddress}}</mat-hint>
+                                        <mat-hint align="end"
+                                                  *ngIf="UrduPermanentAddress!=undefined && UrduPermanentAddress!=''"
+                                                  class="text-md text-black">{{UrduPermanentAddress}}</mat-hint>
                                         <input [readonly]="PresentAddressreadoly" matInput
                                                placeholder="Enter Permanent Address"
                                                formControlName="PermanentAddress" maxlength="150" autocomplete="off"
