--- a/src/app/modules/customer/submit-documents/submit-documents.component.html
+++ b/src/app/modules/customer/submit-documents/submit-documents.component.html
@@ -56,25 +56,28 @@
                     <div class="col-lg-12">
                         <mat-form-field class="w-full" appearance="outline">
                             <mat-label>Description</mat-label>
-                            <input matInput type="text"  (change)="changeTypeData($event.target.value,'file_description',i)"
+                            <input matInput type="text"
+                                   (change)="changeTypeData($event.target.value,'file_description',i)"
                                    [(ngModel)]="description[i]"/>
                         </mat-form-field>
                     </div>
                 </div>
-           <div class="row">
-            <div class="col-lg-6 align-self-center flex">
-                <div *ngIf="doc_urls[i]" class=" mt-2 mr-4 shadow-sm border" style="width: 140px; height: 140px; position: relative;">
-                    <img class="cursor-pointer" [src]="doc_urls[i]" (click)="previewImg(doc_urls[i])">
+                <div class="row">
+                    <div class="col-lg-6 align-self-center flex">
+                        <div *ngIf="doc_urls[i]" class=" mt-2 mr-4 shadow-sm border"
+                             style="width: 140px; height: 140px; position: relative;">
+                            <!--                    <img class="cursor-pointer" [src]="doc_urls[i]" (click)="previewImg(doc_urls[i])">-->
+                        </div>
+
+                        <input width="150" style="    align-self: center;" type="file"
+                               accept="image/png, image/jpg, image/jpeg" appearance="outline"
+                               (change)="onFileChange($event, i)"/>
+
+                    </div>
                 </div>
 
-                <input width="150" style="    align-self: center;" type="file" accept="image/png, image/jpg, image/jpeg" appearance="outline"
-                       (change)="onFileChange($event, i)"/>
-
             </div>
-            </div>
-
         </div>
-</div>
 
     </div>
 
